test/mlir/elements_bad_case_0.mlir.stderr
test/mlir/elements_bad_case_0.mlir:5:27: error: use of value '%b' expects different type than prior uses: 'tensor<f32>' vs 'tensor<f64>'
  %0 = colgm.elements(%a, %b) {target_shape = [2]} : tensor<f32> -> tensor<2xf32>
                          ^
test/mlir/elements_bad_case_0.mlir:4:45: note: prior use here
func.func @bad_mixed_types(%a: tensor<f32>, %b: tensor<f64>) -> tensor<2xf32> {
                                            ^
